feat(opportunity): Add opportunity filters