@@ -9,8 +9,11 @@ import com.influcollab.exception.CollabNotFoundException;
 import com.influcollab.exception.UserNotFoundException;
 import com.influcollab.repository.CollabOpportunityRepository;
 import com.influcollab.repository.UserRepository;
+import com.influcollab.repository.spec.CollabOpportunitySpecification;
+import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
 
+import java.time.LocalDate;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -31,11 +34,29 @@ public class CollabOpportunityService {
         this.mapper = mapper;
     }
 
-    public List<CollabOpportunityDTO> getAllCollabOpportunities() {
-        return collabOpportunityRepository.findAll()
+    public List<CollabOpportunityDTO> getAllCollabOpportunities(String city, LocalDate from, LocalDate to, String ownerId) {
+        Specification<CollabOpportunity> spec = Specification.where(null);
+
+        if (city != null && !city.isBlank()) {
+            spec = spec.and(CollabOpportunitySpecification.hasCity(city.trim()));
+        }
+
+        if (from != null) {
+            spec = spec.and(CollabOpportunitySpecification.startsOnOrAfter(from));
+        }
+
+        if (to != null) {
+            spec = spec.and(CollabOpportunitySpecification.endsOnOrBefore(to));
+        }
+
+        if (ownerId != null && !ownerId.isBlank()) {
+            spec = spec.and(CollabOpportunitySpecification.hasOwnerId(ownerId.trim()));
+        }
+
+        return collabOpportunityRepository.findAll(spec)
                 .stream()
                 .map(mapper::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public CollabOpportunityDTO getCollabOpportunityById(Long id) {
